Added Reg. page file

--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>EasyCode Registration Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
   </head>
   <body>
@@ -20,7 +20,7 @@
         <label for="fname">First Name</label>
       </div>
       <div class="col-75">
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <input type="text" name="firstname" value="Your name..">
       </div>
     </div>
     <div class="row">
@@ -28,7 +28,7 @@
         <label for="lname">Last Name</label>
       </div>
       <div class="col-75">
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <input type="text" name="lastname" value="Your last name..">
       </div>
     </div>
 
@@ -38,7 +38,7 @@
         <label for="Age range">Age range of participant</label>
       </div>
       <div class="col-75">
-        <select id="age-range" name="age-range">
+        <select name="age-range">
           <option value="(9 - 15) years">(9 - 15) years</option>
           <option value="(16 - 30) years">(16 - 30) years</option>
           <option value="Above 30 years">Above 30 years</option>
@@ -51,7 +51,7 @@
         <label for="gname">Guardian's Name</label>
       </div>
       <div class="col-75">
-        <input type="text" id="gname" name="guardian'sname" placeholder="Guardian's name..">
+        <input type="text" name="guardian'sname" value="Guardian's name..">
       </div>
     </div>
 
@@ -60,7 +60,7 @@
         <label for="gphone">Guardian's Whatsapp Contact</label>
       </div>
       <div class="col-75">
-        <input type="text" id="gwcontact" contact="guardian'swcontact" placeholder="Guardian's Whatsapp contact..">
+        <input type="text" contact="guardian'swcontact" value="Guardian's Whatsapp contact..">
       </div>
     </div>
 
@@ -70,7 +70,7 @@
         <label for="gemail">Guardian's E-mail Address</label>
       </div>
       <div class="col-75">
-        <input type="text" id="gemail" email="guardian'swemail" placeholder="Guardian's Email address..">
+        <input type="text" email="guardian'swemail" value="Guardian's Email address..">
       </div>
     </div>
 
@@ -79,7 +79,7 @@
         <label for="subject">Brief information on participant's knowledge in computer literacy</label>
       </div>
       <div class="col-75">
-        <textarea id="subject" name="subject" placeholder="Kindly provide brief information on participant's knowledge in the use of computers.." style="height:200px"></textarea>
+        <textarea name="subject" value="Kindly provide brief information on participant's knowledge in the use of computers.." style="height:200px"></textarea>
       </div>
     </div>
     <div class="row">
